Iot dashboard project home page device list page device details page onboard device page

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  body, html {
+    height: 100%;
+    margin: 0;
+}
 }
 
 code {
